# reachy-mini

./: .env.example  INSTALL.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
bridges/: README.md  __init__.py  grok_bridge.py  openai_bridge.py  voice_bridge.py
colab/: fastvlm_7b_server.ipynb
docs/: DEPLOY_ON_ROBOT.md  GROK_INTEGRATION.md
humming_lab/: .gitignore  README.md
humming_lab/scripts/: 02_curate_samples.py  03_synthesize.py
humming_lab/src/: audio_io.py  config.py  pitch.py
humming_lab/src/methods/: _envelope.py  world_vocoder.py
scripts/: export_emotion_sounds.py
src/reachy_vision/: __init__.py  camera.py  fastvlm.py  moondream.py  preview.py
src/reachy_voice/: __init__.py  __main__.py  _actions.py  _log.py  emotions.py  macarena.py  melody.py  tools.py
src/reachy_voice/bridges/: README.md  __init__.py  base.py  grok.py  openai.py
src/reachy_voice/data/humming/: manifest.json
src/reachy_voice/grok/: __init__.py  chat.py  stt.py  vad.py
src/reachy_voice/humming/: __init__.py  envelope.py  pitch.py  synth.py  world_vocoder.py
src/reachy_voice/melody_tools/: __init__.py  _spec.py  let_it_go.py  macarena.py
src/reachy_voice/openai/: __init__.py  realtime.py
src/reachy_voice/vision/: __init__.py  base.py  camera_worker.py  factory.py  fastvlm.py  moondream.py
tests/: test_macarena.py  test_melody.py  test_melody_bundles.py
tools/humming/: .gitignore  README.md  config.py  curate.py  melodies.py  synthesize.py
tools/humming/data/samples/: curation.json
