[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-voice"
version = "0.1.0"
description = "Voice bridge for Reachy Mini (OpenAI Realtime / Grok chat-with-tools). Text-only model output, robot reacts via head movements + preloaded emotion sounds."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "knoel99" }]
dependencies = [
    "reachy-mini",
    "websocket-client",
    "numpy",
    "scipy>=1.11.0",
    "httpx",
    "webrtcvad-wheels",
    "Pillow>=10.0",
]

[project.optional-dependencies]
moondream = ["moondream>=0.1.0"]
fastvlm = []  # FastVLM client only needs httpx, already in base deps
vision = ["moondream>=0.1.0"]

[project.scripts]
reachy-voice = "reachy_voice.__main__:main"

[project.urls]
Repository = "https://github.com/knoel99/reachy-mini"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reachy_voice = ["py.typed"]
